--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <?php echo $this['run_css']?>
 </style>
 </head>
-<body style="background:#ffe600;">
+<body>
 <div id="app"><?php echo $this['run']?></div>
 </body>
 <script>var REACT_DATA=<?php echo $this['react_data']?></script>
